RESOLVED FIXED198290
[WinCairo][MediaFoundation] Assertion failure in MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample
https://bugs.webkit.org/show_bug.cgi?id=198290
Summary [WinCairo][MediaFoundation] Assertion failure in MediaPlayerPrivateMediaFound...
Fujii Hironori
Reported 2019-05-28 03:32:06 PDT
Created attachment 370721 [details] default-size-should-show-scrubber-crash-log.txt [WinCairo][MediaFoundation] Assertion failure in MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample Some media tests are failing due to assertion failure in MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample. For example, > python ./Tools/Scripts/run-webkit-tests --debug --wincairo --no-new-test-results --dump-render-tree media/controls/default-size-should-show-scrubber.html Callstack: > [WTF!WTFCrash+0xe] > [WebKit!WTFCrashWithInfo+0x20] > [WebKit!COMPtr<IDirect3DSurface9>::operator&+0x6a] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample+0x2de] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::VideoScheduler::scheduleSample+0x113] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::deliverSample+0xe2] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::processOutput+0x6c9] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::SetVideoPosition+0x348] > [WebKit!WebCore::MediaPlayerPrivateMediaFoundation::setSize+0x3cf] > [WebKit!WebCore::MediaPlayer::setSize+0x46] > [WebKit!WebCore::RenderVideo::updatePlayer+0x1cd] > [WebKit!WebCore::RenderVideo::layout+0x53] > [WebKit!WebCore::RenderElement::layoutIfNeeded+0x46] > [WebKit!WebCore::RenderBlockFlow::layoutLineBoxes+0x7fe] > [WebKit!WebCore::RenderBlockFlow::layoutInlineChildren+0xc8] > [WebKit!WebCore::RenderBlockFlow::layoutBlock+0x49b] > [WebKit!WebCore::RenderBlock::layout+0x81] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChild+0x497] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChildren+0x2d6] > [WebKit!WebCore::RenderBlockFlow::layoutBlock+0x4c0] > [WebKit!WebCore::RenderBlock::layout+0x81] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChild+0x497] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChildren+0x2d6] > [WebKit!WebCore::RenderBlockFlow::layoutBlock+0x4c0] > [WebKit!WebCore::RenderBlock::layout+0x81] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChild+0x497] > [WebKit!WebCore::RenderBlockFlow::layoutBlockChildren+0x2d6] > [WebKit!WebCore::RenderBlockFlow::layoutBlock+0x4c0] > [WebKit!WebCore::RenderBlock::layout+0x81] > [WebKit!WebCore::RenderView::layout+0x576] > [WebKit!WebCore::FrameViewLayoutContext::layout+0x972] > [WebKit!WebCore::Document::updateLayout+0x272] > [WebKit!WebCore::Document::updateLayoutIgnorePendingStylesheets+0x62] > [WebKit!WebCore::Element::boundingClientRect+0x4a] > [WebKit!WebCore::Element::getBoundingClientRect+0x37] > [WebKit!WebCore::jsElementPrototypeFunctionGetBoundingClientRectBody+0x40] > [WebKit!WebCore::IDLOperation<WebCore::JSElement>::call<&WebCore::jsElementPrototypeFunctionGetBoundingClientRectBody,WebCore::CastedThisErrorBehavior::Throw>+0x305] > [WebKit!WebCore::jsElementPrototypeFunctionGetBoundingClientRect+0x1a]
Attachments
default-size-should-show-scrubber-crash-log.txt (149.78 KB, text/plain)
2019-05-28 03:32 PDT, Fujii Hironori
no flags
Patch (4.48 KB, patch)
2019-05-28 03:43 PDT, Fujii Hironori
no flags
Patch (1.84 KB, patch)
2019-05-28 03:45 PDT, Fujii Hironori
pvollan: review+
Fujii Hironori
Comment 1 2019-05-28 03:43:50 PDT
Fujii Hironori
Comment 2 2019-05-28 03:45:03 PDT
Per Arne Vollan
Comment 3 2019-05-28 07:32:23 PDT
Comment on attachment 370723 [details] Patch R=me. I think the api-mac failure must be unrelated, since this patch only touches Windows platform code.
Fujii Hironori
Comment 4 2019-05-28 21:35:34 PDT
Radar WebKit Bug Importer
Comment 5 2019-05-28 21:36:19 PDT
Note You need to log in before you can comment on or make changes to this bug.