[WinCairo][MediaFoundation] Assertion failure in MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample https://bugs.webkit.org/show_bug.cgi?id=198290

Reviewed by Per Arne Vollan.

Covered by existing tests.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample):
Call clear() of m_memSurface before assigning new value.

Canonical link: https://commits.webkit.org/212355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245845 268f45cc-cd09-0410-ab3c-d52691b4dbfc